--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,5 +1,5 @@
 name: Ci
-on: [push, pull_request]
+on: push
     jobs:
         publish:
             runs-on: ubuntu-18.04 # Required for linkchecker
