ajout des tests d'intégration à la CI

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,15 +1,28 @@
-name: Ci
+name: Units and Integration tests plus jar creation on branches 
 on: [push, pull_request]
+branches-ignore:
+      - main
 jobs:
     publish:
-        runs-on: ubuntu-18.04 # Required for linkchecker
-        steps:
-        - uses: actions/checkout@v2 # Récupère le contenu du dépôt correspondant au commit du workflow en cours
-        - run: sudo apt-get update && sudo apt-get install -y maven
-        # Génération du dossier livrable `./dist/` avec test inclus
-        - run: mvn clean
-        - run: mvn compile
-        #- run: mvn test # Cible à définir dans le Makefile évidemment
-        #if: contains(github.ref, 'main')
-        #- run: mvn verify
+      runs-on: ubuntu-18.04 # Required for linkchecker
+      steps:
+      - uses: actions/checkout@v2 # Récupère le contenu du dépôt correspondant au commit du workflow en cours
+      - run: sudo apt-get update && sudo apt-get install -y maven
+      # Génération du dossier livrable `./dist/` avec test inclus
+      - run: mvn clean
+      - run: mvn verify
 
+name: Units and Integration tests on main
+on: 
+  pull_request:
+    branches:
+      - main
+jobs:
+  publish:
+    runs-on: ubuntu-18.04 # Required for linkchecker
+    steps:
+    - uses: actions/checkout@v2 # Récupère le contenu du dépôt correspondant au commit du workflow en cours
+    - run: sudo apt-get update && sudo apt-get install -y maven
+    # Génération du dossier livrable `./dist/` avec test inclus
+    - run: mvn clean
+    - run: mvn compile
