--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -14,7 +14,7 @@ jobs:
         run: mvn --batch-mode --update-snapshots compile
 
 
-  unit test:
+  unit_test:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,7 +26,7 @@ jobs:
       - name: Verify unit test with Maven
         run: mvn --batch-mode --update-snapshots test 
 
-  integration test:
+  integration_test:
     runs-on: ubuntu-latest
 
     steps:
