--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -68,6 +68,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: /home/runner/work/projet_integration_continue/projet_integration_continue/target/${{ env.PACKAGE_NAME }}-${{ steps.vars.outputs.tag }}.jar
-          asset_name: ${{ env.PACKAGE_NAME }}-${{ steps.vars.outputs.tag }}.jar
+          asset_path: ./my-artifact.jar
+          asset_name: my-artifact.jar
           asset_content_type: application/java-archive
