--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,6 +47,21 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Cache maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Package project
+        run: mvn --batch-mode package -Dartifact_version=${{ steps.vars.outputs.tag }} -Dmaven.test.skip=true
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
