--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -82,6 +82,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: /home/runner/work/ci-cd/target/${{ steps.vars.outputs.tag }}.jar
-          asset_name: ${{ steps.vars.outputs.tag }}.jar
+          asset_path: /home/runner/work/ci-cd/ci-cd/target/project-2.0.1-src-1.0-SNAPSHOT.jar
+          asset_name: project-2.0.1-src-1.0-SNAPSHOT.jar
           asset_content_type: application/java-archive
