--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cicd.project</groupId>
     <artifactId>project-2.0.1-src</artifactId>
-    <version>${artifact_version}</version>
+    <version>1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
